tests/ui/instance_on_type.stderr
Error [E0311]: `sq` is an instance method on `Point`
  --> tests/ui/instance_on_type.jet:10:17
    |
 10 |     print(Point.sq());
    |                 ^^
 Why: instance methods need a value before the dot
 Fix: call it on a `Point` value: `x.sq(...)`
