tests/ui/instance_on_type.lex
struct Point {
    x: Int;

    fn sq(self) -> Int {
        return self.x;
    }
}

fn main() {
    print(Point.sq());
}
